# falco_engine

./: data_to_scan.txt  meson.build  regex_rules.txt  regex_scan_line_main.c  regex_scan_sample.c
